<resources>
    <string name="app_name">RandomToDo</string>
    <string name="label_new_task">Criar Tarefa</string>
    <string name="label_title">Título</string>
    <string name="label_description">Descrição</string>
    <string name="label_data">Data</string>
    <string name="label_hora">Hora</string>
    <string name="label_cancel">Canselar</string>
    <string name="label_tasks">Tarefas</string>
    <string name="label_editar">Editar</string>
    <string name="label_delete">Delete</string>
    <string name="label_empty_message">Opa! Parece que você não tem\nnenhuma tarefa.</string>
</resources>